<resources>
    <string name="app_name" translatable="false">Blum</string>
    <string name="retweet_title" translatable="false">Retweet?</string>
    <string name="retweet" translatable="false">Retweet</string>
    <string name="ok" translatable="false">OK</string>
    <string name="unfollow" translatable="false">UNFOLLOW</string>
    <string name="email_form_hint" translatable="false">Email</string>
    <string name="mini_seconds" translatable="false">%1$ds</string>
    <string name="mini_minutes" translatable="false">%1$dm</string>
    <string name="mini_hours" translatable="false">%1$dh</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_text">Login</string>
    <string name="welcome">Welcome</string>
    <string name="retweeted_by">Retweeted by @%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="new_tweet_hint">Tweet your life in 140 characters</string>
    <string name="sending_tweet_title">Sending Tweet</string>
    <string name="sending_tweet_content">Sending in Progress</string>
    <string name="share_tweet">Share this Tweet!</string>
    <string name="stop_following">Stop following %1$s?</string>
    <string name="follow">Follow %1$s?</string>
    <string name="check_out">Check out %1$s on Twitter http://twitter.com/%2$s</string>
    <string name="share">Share</string>
    <string name="logout_title_dialog">Logout?</string>
    <string name="yes">Yes</string>
    <string name="internet_connection_required">This operation requires an internet connection</string>
    <string name="likes">%1$s LIKES</string>
    <string name="retweets">%1$s RETWEETS</string>
    <string name="notifications">Notifications</string>
    <string name="nothing_to_show">Nothing to show here :(</string>
    <string name="is_following_not">%1$s is now following you</string>
    <string name="mentioned_not">%1$s mentioned you:</string>
    <string name="action_clear_db">Delete All Notifications</string>
    <string name="clear_database">Delete all notifications?</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Tweet or User</string>
    <string name="logout_done">Log Out Done.</string>
    <string name="like_not_title">%1$s liked your Tweet</string>
    <string name="retw_not_title">%1$s retweeted you</string>
    <string name="follow_not_title">%1$s is now following you</string>
    <string name="reply_not_title">%1$s tweeted</string>
    <string name="retw_ment_not_title">%1$s retweeted a Tweet you were mentioned in</string>
    <string name="cant_find_user">Can\'t load this user, check your internet connection</string>
    <string name="action_profile">My Profile</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="too_many_characters">Too many characters</string>
    <string name="chars_left">Chars Left</string>
    <string name="reached_twitter_user_limit">Reached Twitter limit, please try again in a few minutes</string>
    <string name="streamDialogTitle">Use Stream Notification Service</string>
    <string name="streamContinue">Continue</string>
    <string name="streamDialogMessage">Using the stream notification service, you\'ll get real time
        notifications and new tweets will be brought to you without the need of a refresh.
        Unfortunately, if you follow a huge number of people and if your network isn\'t that great,
        you may experience a really high battery consuming. It\'s up to you. Blum will be restarted.</string>
    <string name="subject_form_hint">Subject</string>
    <string name="content_form">Content</string>
    <string name="send">Send</string>
    <string name="all_fields_needed">All fields are mandatory.</string>
    <string name="provide_valid_email">Please enter a valid email.</string>
    <string name="message_sent">Message successfully sent!</string>
    <string name="sending_message_error">There was some error in sending message.
        Please try again after some time.</string>
    <string name="authorized_by">Authorized by %1$s</string>
    <string name="failed_due">Failed due to %1$s</string>
    <string name="like_removed">Like removed</string>
    <string name="like_added">Tweet liked!</string>
    <string name="following_added">You\'re now following this user</string>
    <string name="following_removed">You\'re not following this user</string>
    <string name="status_retweeted">Status retweeted!</string>
    <string name="tweet_sent_message">Tweet Sent!</string>
    <string name="messages_notifications">Messages Notifications</string>
    <string name="hint_message">Message</string>
    <string name="you_message">You: %1$s</string>
    <string name="message_not_title">%1$s sent you a Message!</string>
    <string name="hint_user">User Name</string>
    <string name="ops">Oops, that\'s embarrassing…</string>
    <string name="come_here_later_message">I\'m still downloading stuff for you. Please, come back here later ;)</string>
    <string name="performing_logout">Performing logout</string>
    <string name="please_wait">Please wait a few seconds…</string>
    <string name="action_not_performed">Oops! Something went wrong, try again later</string>
    <string name="when_likes_ret_pref_title">Likes and Retweets</string>
    <string name="when_mentions_pref_title">Mentions</string>
    <string name="when_followers_pref_title">Followers</string>
    <string name="when_dms_pref_title">Direct Messages</string>
    <string name="when_likes_ret_pref_summary">Show notifications for Favorites and Retweets</string>
    <string name="when_mentions_pref_summary">Show notifications for Mentions</string>
    <string name="when_followers_pref_summary">Show notifications for Followers</string>
    <string name="when_dms_pref_summary">Show notifications for Direct Messages</string>
    <string name="licenses_pref_title">Open Source Licenses</string>
    <string name="licenses_pref_summary">Licenses for open source software used in this app</string>
    <string name="action_mark_as_read">Mark all as read</string>
    <string name="my_twitter"><![CDATA[Developed with ♥ by <a href="com.andreapivetta.blu.user://Pivix00">\@Pivix00<a><br/>Icon from <a href="com.andreapivetta.blu.user://stefano_openlab">\@stefano_openlab<a>]]></string>
    <string name="too_many_images">You can send at most 4 images</string>
    <string name="operation_not_supported">Operation not supported</string>
    <string name="check_out_photo">I\'ve found this photo on Twitter %1$s</string>
    <string name="m_of_n">%1$d of %2$d</string>
    <string name="done">Done!</string>
    <string name="tweet_not_sent">Tweet not sent</string>
    <string name="select_picture">Select Picture</string>
    <string name="follow_simple">Follow</string>
    <string name="amount_followers" translatable="false">&lt;b>%1$s&lt;/b> followers</string>
    <string name="amount_following" translatable="false">&lt;b>%1$s&lt;/b> following</string>
    <string name="following" translatable="false">Following</string>
    <string name="followers" translatable="false">Followers</string>
    <string name="follows_you">%1$s follows you!</string>
    <string name="edit_pref_summary">Edit your name, description etc</string>
    <string name="edit_pref_title">Edit Profile</string>
    <string name="website" translatable="false">Website</string>
    <string name="screen_name">Screen Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="profile_updated">Profile Updated!</string>
    <string name="no_photos">You won\'t be able to tweet new pictures. Click again to grant the permission.</string>
    <string name="no_grab_images">You won\'t be able to send images saved on your phone without this permission. Click again to enable it.</string>
    <string name="previously_denied_storage_permission">You previously denied access to Storage. You have to manually grant this permission in Settings.</string>
    <string name="hint_user_screenname">something</string>
    <string name="insert_user_screenname">Insert User</string>
    <string name="pay_with_tweet_title">Tweet this and forget all the ads!</string>
    <string name="pay_with_tweet_status" translatable="false">Try Blum, a clean, fast and simple Twitter client for Android https://play.google.com/store/apps/details?id=com.andreapivetta.blu via \@Pivix00</string>
    <string name="tweet" translatable="false">Tweet</string>
    <string name="keep_ads">Keep the Ads</string>
    <plurals name="new_tweets">
        <item quantity="one">%1$d new Tweet</item>
        <item quantity="other">%1$d new Tweets</item>
    </plurals>
    <string-array name="when_notifications">
        <item>Never</item>
        <item>Wi-Fi Only</item>
        <item>Always</item>
    </string-array>
    <string-array name="when_notifications_values" translatable="false">
        <item>never</item>
        <item>wifi</item>
        <item>always</item>
    </string-array>
    <string-array name="frequencies">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>120 minutes</item>
    </string-array>
    <string-array name="frequencies_values" translatable="false">
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
    </string-array>
    <string-array name="themes">
        <item>Blue</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes_values" translatable="false">
        <item>B</item>
        <item>P</item>
        <item>G</item>
        <item>D</item>
    </string-array>
    <string-array name="iap_values" translatable="false">
        <item>0.99$</item>
        <item>1.99$</item>
        <item>4.99$</item>
        <item>9.99$</item>
        <item>Just a Tweet</item>
    </string-array>
    <string name="title_empty" translatable="false" />
    <string name="title_activity_tweet" translatable="false">Tweet</string>
    <string name="title_activity_feedback">Send Feedback</string>
    <string name="title_activity_new_tweet">New Tweet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_conversations_list">Direct Messages</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="logout_pref_title" translatable="false">Logout</string>
    <string name="about_pref_title" translatable="false">About</string>
    <string name="logout_pref_summary">Logout and Exit</string>
    <string name="heads_up_notifications_pref_summary">Allow heads-up notifications</string>
    <string name="heads_up_notifications_pref_title">Heads-Up Notifications</string>
    <string name="retweet_imageButton_contentDescriptor" translatable="false">Retweet Image Button</string>
    <string name="favourite_imageButton_contentDescriptor" translatable="false">Favourite Image Button</string>
    <string name="respond_imageButton_contentDescriptor" translatable="false">Respond Image Button</string>
    <string name="share_imageButton_contentDescriptor" translatable="false">Share Image Button</string>
    <string name="tweet_photo_contentDescriptor" translatable="false">Tweet Photo</string>
    <string name="grab_image_contentDescriptor" translatable="false">Upload a Picture Image Button</string>
    <string name="take_photo_contentDescriptor" translatable="false">Take and Add a Photo Image Button</string>
    <string name="openTweet_imageButton_contentDescriptor" translatable="false">Open Tweet Image Button</string>
    <string name="profile_pic_contentDescriptor" translatable="false">Profile Picture</string>
</resources>