<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andreapivetta.blu.activities.FeedbackActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:hint="@string/email_form_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/lightGrey" />

    <View
        android:id="@+id/firstDivider"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="?appColorPrimaryDark" />

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:hint="@string/subject_form_hint"
        android:inputType="textCapSentences"
        android:textColorHint="@color/lightGrey"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/content_form"
        android:inputType="textMultiLine"
        android:textColorHint="@color/lightGrey" />

</LinearLayout>
