<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    card_view:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/userProfilePicImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/profile_pic_contentDescriptor"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/userProfilePicImageView"
            android:layout_toRightOf="@+id/userProfilePicImageView"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/userProfilePicImageView"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-thin" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameTextView"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/userProfilePicImageView"
            android:minHeight="40dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/retweetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/statusTextView"
            android:layout_alignStart="@+id/statusTextView"
            android:layout_below="@+id/statusTextView"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-thin" />

        <LinearLayout
            android:id="@+id/interactionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/retweetTextView"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/favouriteImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/favourite_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_star_grey600_36dp" />

            <ImageButton
                android:id="@+id/retweetImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/retweet_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_repeat_grey600_36dp" />

            <ImageButton
                android:id="@+id/respondImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/respond_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_reply_grey600_36dp" />

            <ImageButton
                android:id="@+id/shareImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/share_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_share_grey600_36dp" />

            <ImageButton
                android:id="@+id/openTweetImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/openTweet_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fullscreen_grey600_36dp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
