<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/userProfilePicImageView"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/profile_pic_contentDescriptor"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userProfilePicImageView"
            android:layout_toEndOf="@+id/userProfilePicImageView"
            android:layout_toRightOf="@+id/userProfilePicImageView"
            android:fontFamily="bold"
            android:includeFontPadding="false"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/screenNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameTextView"
            android:layout_toEndOf="@+id/userProfilePicImageView"
            android:layout_toRightOf="@+id/userProfilePicImageView"
            android:fontFamily="sans-serif-light"
            android:includeFontPadding="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/screenNameTextView"
            android:layout_toEndOf="@+id/userProfilePicImageView"
            android:layout_toRightOf="@+id/userProfilePicImageView"
            android:fontFamily="sans-serif-thin" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/interactionLinearLayout"
            android:layout_alignStart="@+id/interactionLinearLayout"
            android:layout_below="@+id/userProfilePicImageView"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="19sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statusTextView"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tweetPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/tweet_photo_contentDescriptor"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <TextView
                android:id="@+id/retweetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-thin"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retweetsStatsTextView"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/favouritesStatsTextView"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/interactionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statsLinearLayout"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/favouriteImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/favourite_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_star_grey600_36dp" />

            <ImageButton
                android:id="@+id/retweetImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/retweet_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_repeat_grey600_36dp" />

            <ImageButton
                android:id="@+id/quoteImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/respond_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_format_quote_grey600_36dp"/>

            <ImageButton
                android:id="@+id/respondImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/respond_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_reply_grey600_36dp" />

            <ImageButton
                android:id="@+id/shareImageButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/share_imageButton_contentDescriptor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_share_grey600_36dp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>