<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.andreapivetta.blu.activities.NewTweetActivity">

            <LinearLayout
                android:id="@+id/contentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/imagesLinearLayout"
                android:layout_toStartOf="@+id/imagesLinearLayout"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newTweetEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/new_tweet_hint"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/lightGrey" />

                <ImageView
                    android:id="@+id/uploadedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/uploaded_image_contentDescriptor"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/imagesLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/takePhotoImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/take_photo_contentDescriptor"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera_alt_grey600_36dp" />

                <ImageButton
                    android:id="@+id/grabImageImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/grab_image_contentDescriptor"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image_grey600_36dp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>